--- a/host/22427/table2/index.html
+++ b/host/22427/table2/index.html
@@ -1,36 +1,388 @@
-<style type="text/css">
-.tg  {border-collapse:collapse;border-spacing:0;}
-.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
-.tg .tg-8dfh{color:#333333;font-family:Arial, Helvetica, sans-serif !important;font-size:10px;text-align:center;vertical-align:top}
-.tg .tg-a0un{font-family:Arial, Helvetica, sans-serif !important;font-size:10px;text-align:left;vertical-align:top}
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
+xmlns:x="urn:schemas-microsoft-com:office:excel"
+xmlns="http://www.w3.org/TR/REC-html40">
+
+<head>
+<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta name=ProgId content=Excel.Sheet>
+<meta name=Generator content="Microsoft Excel 15">
+<link rel=File-List href="index-filer/filelist.xml">
+<style id="KVP resultat 2022-07-08_26911_Styles">
+<!--table
+	{mso-displayed-decimal-separator:"\,";
+	mso-displayed-thousand-separator:" ";}
+.xl1526911
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl6326911
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:9.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:0;
+	text-align:center;
+	vertical-align:middle;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl6426911
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:9.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:center;
+	vertical-align:middle;
+	border-top:1.0pt solid #7F7F7F;
+	border-right:none;
+	border-bottom:1.0pt solid #7F7F7F;
+	border-left:none;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl6526911
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:9.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
+	border-right:none;
+	border-bottom:1.0pt solid #7F7F7F;
+	border-left:none;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl6626911
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:9.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:center;
+	vertical-align:middle;
+	border-top:none;
+	border-right:none;
+	border-bottom:1.0pt solid #7F7F7F;
+	border-left:none;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl6726911
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:9.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:center;
+	vertical-align:middle;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl6826911
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:9.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:"Times New Roman", serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:center;
+	vertical-align:middle;
+	border-top:1.0pt solid #7F7F7F;
+	border-right:none;
+	border-bottom:1.0pt solid #7F7F7F;
+	border-left:none;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl6926911
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:9.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:0;
+	text-align:center;
+	vertical-align:middle;
+	border-top:1.0pt solid #7F7F7F;
+	border-right:none;
+	border-bottom:1.0pt solid #7F7F7F;
+	border-left:none;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl7026911
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:9.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:"Times New Roman", serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:center;
+	vertical-align:middle;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl7126911
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:9.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:0;
+	text-align:center;
+	vertical-align:middle;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl7226911
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:9.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:0;
+	text-align:center;
+	vertical-align:middle;
+	border-top:1.0pt solid #7F7F7F;
+	border-right:none;
+	border-bottom:1.0pt solid #7F7F7F;
+	border-left:none;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+-->
 </style>
-<table class="tg">
-<thead>
-  <tr>
-    <th class="tg-a0un">KylvÃ¤rmepumpar</th>
-    <th class="tg-8dfh">EER</th>
-    <th class="tg-8dfh">SEER</th>
-    <th class="tg-8dfh">COP (VS/VV)</th>
-    <th class="tg-8dfh">SCOP (VS/VV)</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td class="tg-a0un">Kydrift</td>
-    <td class="tg-8dfh">4,2</td>
-    <td class="tg-8dfh">4,5</td>
-    <td class="tg-8dfh">-</td>
-    <td class="tg-8dfh">-</td>
-  </tr>
-  <tr>
-    <td class="tg-a0un">VÃ¤rmedrift</td>
-    <td class="tg-8dfh">3,0</td>
-    <td class="tg-8dfh">4,0</td>
-    <td class="tg-8dfh">-</td>
-    <td class="tg-8dfh">-</td>
-  </tr>
-</tbody>
+</head>
+
+<body>
+<!--[if !excel]>&nbsp;&nbsp;<![endif]-->
+<!--Följande information genererades av guiden Publicera som webbsida i
+Microsoft Excel.-->
+<!--Om samma element publiceras på nytt från Excel, kommer all information
+mellan DIV-parametrarna att ersättas.-->
+<!----------------------------->
+<!--BÖRJAN PÅ UTDATA FRÅN GUIDEN PUBLICERA SOM WEBBSIDA I EXCEL -->
+<!----------------------------->
+
+<div id="KVP resultat 2022-07-08_26911" align=center x:publishsource="Excel">
+
+<table border=0 cellpadding=0 cellspacing=0 width=500 style='border-collapse:
+ collapse;table-layout:fixed;width:376pt'>
+ <col width=171 style='mso-width-source:userset;mso-width-alt:6087;width:128pt'>
+ <col width=82 style='mso-width-source:userset;mso-width-alt:2929;width:62pt'>
+ <col width=114 style='mso-width-source:userset;mso-width-alt:4067;width:86pt'>
+ <col width=133 style='mso-width-source:userset;mso-width-alt:4721;width:100pt'>
+ <tr height=24 style='height:18.0pt'>
+  <td height=24 class=xl6426911 width=171 style='height:18.0pt;width:128pt'>&nbsp;</td>
+  <td class=xl6426911 width=82 style='width:62pt'>Energi [MWh]</td>
+  <td class=xl6426911 width=114 style='width:86pt'>Kyldrift, effekt [kW]</td>
+  <td class=xl6426911 width=133 style='width:100pt'>Värmedrift, effekt [kW]</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl6526911 style='height:15.0pt'>Kylvärmepumpar</td>
+  <td class=xl6626911>&nbsp;</td>
+  <td class=xl6626911>&nbsp;</td>
+  <td class=xl6626911>&nbsp;</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl6726911 style='height:15.0pt'>Total kondensorvärme
+  (KVP)</td>
+  <td class=xl6326911>807</td>
+  <td class=xl6326911>1297</td>
+  <td class=xl6326911>465</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl6826911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  Avsättning på VS-krets</td>
+  <td class=xl6926911>515</td>
+  <td class=xl6926911>99</td>
+  <td class=xl6926911>450</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl7026911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  Avsättning på VV/VVC</td>
+  <td class=xl7126911>125</td>
+  <td class=xl6926911 style='border-top:none'>14</td>
+  <td class=xl7126911>14</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl6826911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  Avsättning på borrhålskrets</td>
+  <td class=xl6926911>18</td>
+  <td class=xl6926911 style='border-top:none'>472</td>
+  <td class=xl6926911>-</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl6826911 style='height:15.0pt;border-top:none'><span
+  style='mso-spacerun:yes'> </span>-
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Avsättning på avluft</td>
+  <td class=xl6926911 style='border-top:none'>154</td>
+  <td class=xl6926911 style='border-top:none'>800</td>
+  <td class=xl6926911 style='border-top:none'>-</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl1526911 style='height:15.0pt'></td>
+  <td class=xl1526911></td>
+  <td class=xl1526911></td>
+  <td class=xl1526911></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl6426911 style='height:15.0pt'>Total förångarvärme (KVP)</td>
+  <td class=xl7226911>567</td>
+  <td class=xl7226911>1048</td>
+  <td class=xl7226911>325</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl7026911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  Från KB-krets<span style='mso-spacerun:yes'> </span></td>
+  <td class=xl7126911>356</td>
+  <td class=xl7126911>1048</td>
+  <td class=xl7126911>86</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl6826911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  Från borrhålskrets</td>
+  <td class=xl6926911>211</td>
+  <td class=xl6926911>0</td>
+  <td class=xl6926911>289</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl6726911 style='height:15.0pt'></td>
+  <td class=xl7126911></td>
+  <td class=xl7126911></td>
+  <td class=xl7126911></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl6426911 style='height:15.0pt'>Kompressorel</td>
+  <td class=xl6926911>240</td>
+  <td class=xl6926911>249</td>
+  <td class=xl6926911>139</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl6726911 style='height:15.0pt'></td>
+  <td class=xl7126911></td>
+  <td class=xl7126911></td>
+  <td class=xl7126911></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl6426911 style='height:15.0pt'>Fjärrvärme</td>
+  <td class=xl6926911>-</td>
+  <td class=xl6926911>-</td>
+  <td class=xl6926911>-</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl7026911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  Avsättning på VS-krets</td>
+  <td class=xl7126911>-</td>
+  <td class=xl7126911>-</td>
+  <td class=xl7126911>-</td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl6826911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  Avsättning på VV/VVC</td>
+  <td class=xl6926911>-</td>
+  <td class=xl6926911>-</td>
+  <td class=xl6926911>-</td>
+ </tr>
+ <![if supportMisalignedColumns]>
+ <tr height=0 style='display:none'>
+  <td width=171 style='width:128pt'></td>
+  <td width=82 style='width:62pt'></td>
+  <td width=114 style='width:86pt'></td>
+  <td width=133 style='width:100pt'></td>
+ </tr>
+ <![endif]>
 </table>
+
+</div>
+
+
+<!----------------------------->
+<!--SLUTET PÅ UTDATA FRÅN GUIDEN PUBLICERA SOM WEBBSIDA I EXCEL-->
+<!----------------------------->
+</body>
+
+</html>
