--- a/host/22427/table2/index.html
+++ b/host/22427/table2/index.html
@@ -3,15 +3,15 @@ xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+<meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="index-filer/filelist.xml">
-<style id="KVP resultat 2022-07-08_26911_Styles">
+<style id="KVP resultat 2022-07-08_3819_Styles">
 <!--table
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
-.xl1526911
+.xl153819
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -29,25 +29,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6326911
-	{padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:9.0pt;
-	font-weight:700;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:0;
-	text-align:center;
-	vertical-align:middle;
-	mso-background-source:auto;
-	mso-pattern:auto;
-	white-space:nowrap;}
-.xl6426911
+.xl633819
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -69,29 +51,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6526911
-	{padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:9.0pt;
-	font-weight:700;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:General;
-	text-align:center;
-	vertical-align:middle;
-	border-top:none;
-	border-right:none;
-	border-bottom:1.0pt solid #7F7F7F;
-	border-left:none;
-	mso-background-source:auto;
-	mso-pattern:auto;
-	white-space:nowrap;}
-.xl6626911
+.xl643819
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -103,17 +63,17 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	text-decoration:none;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
-	mso-number-format:General;
+	mso-number-format:0;
 	text-align:center;
 	vertical-align:middle;
-	border-top:none;
+	border-top:1.0pt solid #7F7F7F;
 	border-right:none;
 	border-bottom:1.0pt solid #7F7F7F;
 	border-left:none;
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6726911
+.xl653819
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -125,13 +85,17 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	text-decoration:none;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
-	mso-number-format:General;
+	mso-number-format:0;
 	text-align:center;
 	vertical-align:middle;
+	border-top:1.0pt solid #7F7F7F;
+	border-right:none;
+	border-bottom:1.0pt solid #7F7F7F;
+	border-left:none;
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6826911
+.xl663819
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -144,7 +108,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	font-family:"Times New Roman", serif;
 	mso-font-charset:0;
 	mso-number-format:General;
-	text-align:center;
+	text-align:left;
 	vertical-align:middle;
 	border-top:1.0pt solid #7F7F7F;
 	border-right:none;
@@ -153,29 +117,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6926911
-	{padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:9.0pt;
-	font-weight:400;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:0;
-	text-align:center;
-	vertical-align:middle;
-	border-top:1.0pt solid #7F7F7F;
-	border-right:none;
-	border-bottom:1.0pt solid #7F7F7F;
-	border-left:none;
-	mso-background-source:auto;
-	mso-pattern:auto;
-	white-space:nowrap;}
-.xl7026911
+.xl673819
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -188,43 +130,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	font-family:"Times New Roman", serif;
 	mso-font-charset:0;
 	mso-number-format:General;
-	text-align:center;
-	vertical-align:middle;
-	mso-background-source:auto;
-	mso-pattern:auto;
-	white-space:nowrap;}
-.xl7126911
-	{padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:9.0pt;
-	font-weight:400;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:0;
-	text-align:center;
-	vertical-align:middle;
-	mso-background-source:auto;
-	mso-pattern:auto;
-	white-space:nowrap;}
-.xl7226911
-	{padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:9.0pt;
-	font-weight:700;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:0;
-	text-align:center;
+	text-align:right;
 	vertical-align:middle;
 	border-top:1.0pt solid #7F7F7F;
 	border-right:none;
@@ -239,140 +145,54 @@ xmlns="http://www.w3.org/TR/REC-html40">
 
 <body>
 <!--[if !excel]>&nbsp;&nbsp;<![endif]-->
-<!--Följande information genererades av guiden Publicera som webbsida i
+<!--FÃ¶ljande information genererades av guiden Publicera som webbsida i
 Microsoft Excel.-->
-<!--Om samma element publiceras på nytt från Excel, kommer all information
-mellan DIV-parametrarna att ersättas.-->
+<!--Om samma element publiceras pÃ¥ nytt frÃ¥n Excel, kommer all information
+mellan DIV-parametrarna att ersÃ¤ttas.-->
 <!----------------------------->
-<!--BÖRJAN PÅ UTDATA FRÅN GUIDEN PUBLICERA SOM WEBBSIDA I EXCEL -->
+<!--BÃ–RJAN PÃ… UTDATA FRÃ…N GUIDEN PUBLICERA SOM WEBBSIDA I EXCEL -->
 <!----------------------------->
 
-<div id="KVP resultat 2022-07-08_26911" align=center x:publishsource="Excel">
+<div id="KVP resultat 2022-07-08_3819" align=center x:publishsource="Excel">
 
-<table border=0 cellpadding=0 cellspacing=0 width=500 style='border-collapse:
- collapse;table-layout:fixed;width:376pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=253 style='border-collapse:
+ collapse;table-layout:fixed;width:190pt'>
  <col width=171 style='mso-width-source:userset;mso-width-alt:6087;width:128pt'>
  <col width=82 style='mso-width-source:userset;mso-width-alt:2929;width:62pt'>
- <col width=114 style='mso-width-source:userset;mso-width-alt:4067;width:86pt'>
- <col width=133 style='mso-width-source:userset;mso-width-alt:4721;width:100pt'>
- <tr height=24 style='height:18.0pt'>
-  <td height=24 class=xl6426911 width=171 style='height:18.0pt;width:128pt'>&nbsp;</td>
-  <td class=xl6426911 width=82 style='width:62pt'>Energi [MWh]</td>
-  <td class=xl6426911 width=114 style='width:86pt'>Kyldrift, effekt [kW]</td>
-  <td class=xl6426911 width=133 style='width:100pt'>Värmedrift, effekt [kW]</td>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl633819 width=171 style='height:15.0pt;width:128pt'>Total
+  kyla [MWh]</td>
+  <td class=xl653819 width=82 style='width:62pt'>509</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6526911 style='height:15.0pt'>Kylvärmepumpar</td>
-  <td class=xl6626911>&nbsp;</td>
-  <td class=xl6626911>&nbsp;</td>
-  <td class=xl6626911>&nbsp;</td>
+  <td height=20 class=xl663819 style='height:15.0pt;border-top:none'>FrÃ¥n
+  fÃ¶rÃ¥ngare</td>
+  <td class=xl643819 style='border-top:none'>356</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6726911 style='height:15.0pt'>Total kondensorvärme
-  (KVP)</td>
-  <td class=xl6326911>807</td>
-  <td class=xl6326911>1297</td>
-  <td class=xl6326911>465</td>
+  <td height=20 class=xl673819 style='height:15.0pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  Varav under vÃ¤rmedrift</td>
+  <td class=xl643819 style='border-top:none'>115</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6826911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  Avsättning på VS-krets</td>
-  <td class=xl6926911>515</td>
-  <td class=xl6926911>99</td>
-  <td class=xl6926911>450</td>
+  <td height=20 class=xl673819 style='height:15.0pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  Varav under frikyldrift</td>
+  <td class=xl643819 style='border-top:none'>99</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl7026911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  Avsättning på VV/VVC</td>
-  <td class=xl7126911>125</td>
-  <td class=xl6926911 style='border-top:none'>14</td>
-  <td class=xl7126911>14</td>
+  <td height=20 class=xl673819 style='height:15.0pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  Varav under aktiv kyldrift</td>
+  <td class=xl643819 style='border-top:none'>142</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6826911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  Avsättning på borrhålskrets</td>
-  <td class=xl6926911>18</td>
-  <td class=xl6926911 style='border-top:none'>472</td>
-  <td class=xl6926911>-</td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6826911 style='height:15.0pt;border-top:none'><span
-  style='mso-spacerun:yes'> </span>-
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Avsättning på avluft</td>
-  <td class=xl6926911 style='border-top:none'>154</td>
-  <td class=xl6926911 style='border-top:none'>800</td>
-  <td class=xl6926911 style='border-top:none'>-</td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl1526911 style='height:15.0pt'></td>
-  <td class=xl1526911></td>
-  <td class=xl1526911></td>
-  <td class=xl1526911></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6426911 style='height:15.0pt'>Total förångarvärme (KVP)</td>
-  <td class=xl7226911>567</td>
-  <td class=xl7226911>1048</td>
-  <td class=xl7226911>325</td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl7026911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  Från KB-krets<span style='mso-spacerun:yes'> </span></td>
-  <td class=xl7126911>356</td>
-  <td class=xl7126911>1048</td>
-  <td class=xl7126911>86</td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6826911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  Från borrhålskrets</td>
-  <td class=xl6926911>211</td>
-  <td class=xl6926911>0</td>
-  <td class=xl6926911>289</td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6726911 style='height:15.0pt'></td>
-  <td class=xl7126911></td>
-  <td class=xl7126911></td>
-  <td class=xl7126911></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6426911 style='height:15.0pt'>Kompressorel</td>
-  <td class=xl6926911>240</td>
-  <td class=xl6926911>249</td>
-  <td class=xl6926911>139</td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6726911 style='height:15.0pt'></td>
-  <td class=xl7126911></td>
-  <td class=xl7126911></td>
-  <td class=xl7126911></td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6426911 style='height:15.0pt'>Fjärrvärme</td>
-  <td class=xl6926911>-</td>
-  <td class=xl6926911>-</td>
-  <td class=xl6926911>-</td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl7026911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  Avsättning på VS-krets</td>
-  <td class=xl7126911>-</td>
-  <td class=xl7126911>-</td>
-  <td class=xl7126911>-</td>
- </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6826911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  Avsättning på VV/VVC</td>
-  <td class=xl6926911>-</td>
-  <td class=xl6926911>-</td>
-  <td class=xl6926911>-</td>
+  <td height=20 class=xl663819 style='height:15.0pt;border-top:none'>FrÃ¥n
+  frikyla geolager</td>
+  <td class=xl643819 style='border-top:none'>152</td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
   <td width=171 style='width:128pt'></td>
   <td width=82 style='width:62pt'></td>
-  <td width=114 style='width:86pt'></td>
-  <td width=133 style='width:100pt'></td>
  </tr>
  <![endif]>
 </table>
@@ -381,7 +201,7 @@ mellan DIV-parametrarna att ersättas.-->
 
 
 <!----------------------------->
-<!--SLUTET PÅ UTDATA FRÅN GUIDEN PUBLICERA SOM WEBBSIDA I EXCEL-->
+<!--SLUTET PÃ… UTDATA FRÃ…N GUIDEN PUBLICERA SOM WEBBSIDA I EXCEL-->
 <!----------------------------->
 </body>
 
