--- a/host/22427/table2/index.html
+++ b/host/22427/table2/index.html
@@ -7,8 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="index-filer/filelist.xml">
-<style id="KVP resultat 2022-07-08_3819_Styles">
-<!--table
+<style id="KVP resultat 2022-07-08_3819_Styles"><!--table
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
 .xl153819
@@ -35,7 +34,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:9.0pt;
+	font-size:14.0pt;
 	font-weight:700;
 	font-style:normal;
 	text-decoration:none;
@@ -57,7 +56,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:9.0pt;
+	font-size:14.0pt;
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
@@ -79,7 +78,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:9.0pt;
+	font-size:14.0pt;
 	font-weight:700;
 	font-style:normal;
 	text-decoration:none;
@@ -101,7 +100,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:9.0pt;
+	font-size:14.0pt;
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
@@ -123,7 +122,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:9.0pt;
+	font-size:14.0pt;
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
@@ -139,8 +138,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
--->
-</style>
+--></style>
 </head>
 
 <body>
@@ -155,44 +153,44 @@ mellan DIV-parametrarna att ersättas.-->
 
 <div id="KVP resultat 2022-07-08_3819" align=center x:publishsource="Excel">
 
-<table border=0 cellpadding=0 cellspacing=0 width=253 style='border-collapse:
- collapse;table-layout:fixed;width:190pt'>
- <col width=171 style='mso-width-source:userset;mso-width-alt:6087;width:128pt'>
- <col width=82 style='mso-width-source:userset;mso-width-alt:2929;width:62pt'>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl633819 width=171 style='height:15.0pt;width:128pt'>Total
+<table border=0 cellpadding=0 cellspacing=0 width=399 style='border-collapse:
+ collapse;table-layout:fixed;width:300pt'>
+ <col width=269 style='mso-width-source:userset;mso-width-alt:9557;width:202pt'>
+ <col width=130 style='mso-width-source:userset;mso-width-alt:4636;width:98pt'>
+ <tr height=24 style='height:18.0pt'>
+  <td height=24 class=xl633819 width=269 style='height:18.0pt;width:202pt'>Total
   kyla [MWh]</td>
-  <td class=xl653819 width=82 style='width:62pt'>509</td>
+  <td class=xl653819 width=130 style='width:98pt'>509</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl663819 style='height:15.0pt;border-top:none'>Från
+ <tr height=25 style='height:18.6pt'>
+  <td height=25 class=xl663819 style='height:18.6pt;border-top:none'>Från
   förångare</td>
   <td class=xl643819 style='border-top:none'>356</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl673819 style='height:15.0pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ <tr height=25 style='height:18.6pt'>
+  <td height=25 class=xl673819 style='height:18.6pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Varav under värmedrift</td>
   <td class=xl643819 style='border-top:none'>115</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl673819 style='height:15.0pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ <tr height=25 style='height:18.6pt'>
+  <td height=25 class=xl673819 style='height:18.6pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Varav under frikyldrift</td>
   <td class=xl643819 style='border-top:none'>99</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl673819 style='height:15.0pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ <tr height=25 style='height:18.6pt'>
+  <td height=25 class=xl673819 style='height:18.6pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Varav under aktiv kyldrift</td>
   <td class=xl643819 style='border-top:none'>142</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl663819 style='height:15.0pt;border-top:none'>Från
+ <tr height=25 style='height:18.6pt'>
+  <td height=25 class=xl663819 style='height:18.6pt;border-top:none'>Från
   frikyla geolager</td>
   <td class=xl643819 style='border-top:none'>152</td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
-  <td width=171 style='width:128pt'></td>
-  <td width=82 style='width:62pt'></td>
+  <td width=269 style='width:202pt'></td>
+  <td width=130 style='width:98pt'></td>
  </tr>
  <![endif]>
 </table>
@@ -206,3 +204,4 @@ mellan DIV-parametrarna att ersättas.-->
 </body>
 
 </html>
+
