--- a/host/22427/table/index.htm
+++ b/host/22427/table/index.htm
@@ -7,11 +7,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="index-filer/filelist.xml">
-<style id="KVP resultat 2022-07-08_26911_Styles">
+<style id="KVP resultat 2022-07-08_23725_Styles">
 <!--table
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
-.xl1526911
+.xl1523725
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -29,53 +29,13 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6326911
+.xl6323725
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:9.0pt;
-	font-weight:700;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:0;
-	text-align:center;
-	vertical-align:middle;
-	mso-background-source:auto;
-	mso-pattern:auto;
-	white-space:nowrap;}
-.xl6426911
-	{padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:9.0pt;
-	font-weight:700;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:General;
-	text-align:center;
-	vertical-align:middle;
-	border-top:1.0pt solid #7F7F7F;
-	border-right:none;
-	border-bottom:1.0pt solid #7F7F7F;
-	border-left:none;
-	mso-background-source:auto;
-	mso-pattern:auto;
-	white-space:nowrap;}
-.xl6526911
-	{padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:9.0pt;
+	font-size:14.0pt;
 	font-weight:700;
 	font-style:normal;
 	text-decoration:none;
@@ -91,13 +51,35 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6626911
+.xl6423725
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:9.0pt;
+	font-size:14.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:center;
+	vertical-align:middle;
+	border-top:1.0pt solid #7F7F7F;
+	border-right:none;
+	border-bottom:1.0pt solid #7F7F7F;
+	border-left:none;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl6523725
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:14.0pt;
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
@@ -113,13 +95,13 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6726911
+.xl6623725
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:9.0pt;
+	font-size:14.0pt;
 	font-weight:700;
 	font-style:normal;
 	text-decoration:none;
@@ -131,13 +113,31 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6826911
+.xl6723725
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:9.0pt;
+	font-size:14.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:0;
+	text-align:center;
+	vertical-align:middle;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl6823725
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:14.0pt;
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
@@ -153,13 +153,13 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl6926911
+.xl6923725
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:9.0pt;
+	font-size:14.0pt;
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
@@ -175,13 +175,13 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl7026911
+.xl7023725
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:9.0pt;
+	font-size:14.0pt;
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
@@ -193,13 +193,13 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl7126911
+.xl7123725
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:9.0pt;
+	font-size:14.0pt;
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
@@ -211,13 +211,31 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl7226911
+.xl7223725
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:9.0pt;
+	font-size:14.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Calibri, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:bottom;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl7323725
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:14.0pt;
 	font-weight:700;
 	font-style:normal;
 	text-decoration:none;
@@ -247,132 +265,132 @@ mellan DIV-parametrarna att ersättas.-->
 <!--BÖRJAN PÅ UTDATA FRÅN GUIDEN PUBLICERA SOM WEBBSIDA I EXCEL -->
 <!----------------------------->
 
-<div id="KVP resultat 2022-07-08_26911" align=center x:publishsource="Excel">
+<div id="KVP resultat 2022-07-08_23725" align=center x:publishsource="Excel">
 
-<table border=0 cellpadding=0 cellspacing=0 width=500 style='border-collapse:
- collapse;table-layout:fixed;width:376pt'>
- <col width=171 style='mso-width-source:userset;mso-width-alt:6087;width:128pt'>
- <col width=82 style='mso-width-source:userset;mso-width-alt:2929;width:62pt'>
- <col width=114 style='mso-width-source:userset;mso-width-alt:4067;width:86pt'>
- <col width=133 style='mso-width-source:userset;mso-width-alt:4721;width:100pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=789 style='border-collapse:
+ collapse;table-layout:fixed;width:593pt'>
+ <col width=269 style='mso-width-source:userset;mso-width-alt:9557;width:202pt'>
+ <col width=130 style='mso-width-source:userset;mso-width-alt:4636;width:98pt'>
+ <col width=181 style='mso-width-source:userset;mso-width-alt:6428;width:136pt'>
+ <col width=209 style='mso-width-source:userset;mso-width-alt:7424;width:157pt'>
  <tr height=24 style='height:18.0pt'>
-  <td height=24 class=xl6426911 width=171 style='height:18.0pt;width:128pt'>&nbsp;</td>
-  <td class=xl6426911 width=82 style='width:62pt'>Energi [MWh]</td>
-  <td class=xl6426911 width=114 style='width:86pt'>Kyldrift, effekt [kW]</td>
-  <td class=xl6426911 width=133 style='width:100pt'>Värmedrift, effekt [kW]</td>
+  <td height=24 class=xl6423725 width=269 style='height:18.0pt;width:202pt'>&nbsp;</td>
+  <td class=xl6423725 width=130 style='width:98pt'>Energi [MWh]</td>
+  <td class=xl6423725 width=181 style='width:136pt'>Kyldrift, effekt [kW]</td>
+  <td class=xl6423725 width=209 style='width:157pt'>Värmedrift, effekt [kW]</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6526911 style='height:15.0pt'>Kylvärmepumpar</td>
-  <td class=xl6626911>&nbsp;</td>
-  <td class=xl6626911>&nbsp;</td>
-  <td class=xl6626911>&nbsp;</td>
+ <tr height=24 style='height:18.0pt'>
+  <td height=24 class=xl6323725 style='height:18.0pt'>Kylvärmepumpar</td>
+  <td class=xl6523725>&nbsp;</td>
+  <td class=xl6523725>&nbsp;</td>
+  <td class=xl6523725>&nbsp;</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6726911 style='height:15.0pt'>Total kondensorvärme
+ <tr height=24 style='height:18.0pt'>
+  <td height=24 class=xl6623725 style='height:18.0pt'>Total kondensorvärme
   (KVP)</td>
-  <td class=xl6326911>807</td>
-  <td class=xl6326911>1297</td>
-  <td class=xl6326911>465</td>
+  <td class=xl6723725>807</td>
+  <td class=xl6723725>1297</td>
+  <td class=xl6723725>465</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6826911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ <tr height=25 style='height:18.6pt'>
+  <td height=25 class=xl6823725 style='height:18.6pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Avsättning på VS-krets</td>
-  <td class=xl6926911>515</td>
-  <td class=xl6926911>99</td>
-  <td class=xl6926911>450</td>
+  <td class=xl6923725>515</td>
+  <td class=xl6923725>99</td>
+  <td class=xl6923725>450</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl7026911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ <tr height=25 style='height:18.6pt'>
+  <td height=25 class=xl7023725 style='height:18.6pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Avsättning på VV/VVC</td>
-  <td class=xl7126911>125</td>
-  <td class=xl6926911 style='border-top:none'>14</td>
-  <td class=xl7126911>14</td>
+  <td class=xl7123725>125</td>
+  <td class=xl6923725 style='border-top:none'>14</td>
+  <td class=xl7123725>14</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6826911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ <tr height=25 style='height:18.6pt'>
+  <td height=25 class=xl6823725 style='height:18.6pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Avsättning på borrhålskrets</td>
-  <td class=xl6926911>18</td>
-  <td class=xl6926911 style='border-top:none'>472</td>
-  <td class=xl6926911>-</td>
+  <td class=xl6923725>18</td>
+  <td class=xl6923725 style='border-top:none'>472</td>
+  <td class=xl6923725>-</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6826911 style='height:15.0pt;border-top:none'><span
+ <tr height=25 style='height:18.6pt'>
+  <td height=25 class=xl6823725 style='height:18.6pt;border-top:none'><span
   style='mso-spacerun:yes'> </span>-
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Avsättning på avluft</td>
-  <td class=xl6926911 style='border-top:none'>154</td>
-  <td class=xl6926911 style='border-top:none'>800</td>
-  <td class=xl6926911 style='border-top:none'>-</td>
+  <td class=xl6923725 style='border-top:none'>154</td>
+  <td class=xl6923725 style='border-top:none'>800</td>
+  <td class=xl6923725 style='border-top:none'>-</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl1526911 style='height:15.0pt'></td>
-  <td class=xl1526911></td>
-  <td class=xl1526911></td>
-  <td class=xl1526911></td>
+ <tr height=25 style='height:18.6pt'>
+  <td height=25 class=xl7223725 style='height:18.6pt'></td>
+  <td class=xl7223725></td>
+  <td class=xl7223725></td>
+  <td class=xl7223725></td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6426911 style='height:15.0pt'>Total förångarvärme (KVP)</td>
-  <td class=xl7226911>567</td>
-  <td class=xl7226911>1048</td>
-  <td class=xl7226911>325</td>
+ <tr height=24 style='height:18.0pt'>
+  <td height=24 class=xl6423725 style='height:18.0pt'>Total förångarvärme (KVP)</td>
+  <td class=xl7323725>567</td>
+  <td class=xl7323725>1048</td>
+  <td class=xl7323725>325</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl7026911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ <tr height=25 style='height:18.6pt'>
+  <td height=25 class=xl7023725 style='height:18.6pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Från KB-krets<span style='mso-spacerun:yes'> </span></td>
-  <td class=xl7126911>356</td>
-  <td class=xl7126911>1048</td>
-  <td class=xl7126911>86</td>
+  <td class=xl7123725>356</td>
+  <td class=xl7123725>1048</td>
+  <td class=xl7123725>86</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6826911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ <tr height=25 style='height:18.6pt'>
+  <td height=25 class=xl6823725 style='height:18.6pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Från borrhålskrets</td>
-  <td class=xl6926911>211</td>
-  <td class=xl6926911>0</td>
-  <td class=xl6926911>289</td>
+  <td class=xl6923725>211</td>
+  <td class=xl6923725>0</td>
+  <td class=xl6923725>289</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6726911 style='height:15.0pt'></td>
-  <td class=xl7126911></td>
-  <td class=xl7126911></td>
-  <td class=xl7126911></td>
+ <tr height=24 style='height:18.0pt'>
+  <td height=24 class=xl6623725 style='height:18.0pt'></td>
+  <td class=xl7123725></td>
+  <td class=xl7123725></td>
+  <td class=xl7123725></td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6426911 style='height:15.0pt'>Kompressorel</td>
-  <td class=xl6926911>240</td>
-  <td class=xl6926911>249</td>
-  <td class=xl6926911>139</td>
+ <tr height=24 style='height:18.0pt'>
+  <td height=24 class=xl6423725 style='height:18.0pt'>Kompressorel</td>
+  <td class=xl6923725>240</td>
+  <td class=xl6923725>249</td>
+  <td class=xl6923725>139</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6726911 style='height:15.0pt'></td>
-  <td class=xl7126911></td>
-  <td class=xl7126911></td>
-  <td class=xl7126911></td>
+ <tr height=24 style='height:18.0pt'>
+  <td height=24 class=xl6623725 style='height:18.0pt'></td>
+  <td class=xl7123725></td>
+  <td class=xl7123725></td>
+  <td class=xl7123725></td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6426911 style='height:15.0pt'>Fjärrvärme</td>
-  <td class=xl6926911>-</td>
-  <td class=xl6926911>-</td>
-  <td class=xl6926911>-</td>
+ <tr height=24 style='height:18.0pt'>
+  <td height=24 class=xl6423725 style='height:18.0pt'>Fjärrvärme</td>
+  <td class=xl6923725>-</td>
+  <td class=xl6923725>-</td>
+  <td class=xl6923725>-</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl7026911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ <tr height=25 style='height:18.6pt'>
+  <td height=25 class=xl7023725 style='height:18.6pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Avsättning på VS-krets</td>
-  <td class=xl7126911>-</td>
-  <td class=xl7126911>-</td>
-  <td class=xl7126911>-</td>
+  <td class=xl7123725>-</td>
+  <td class=xl7123725>-</td>
+  <td class=xl7123725>-</td>
  </tr>
- <tr height=20 style='height:15.0pt'>
-  <td height=20 class=xl6826911 style='height:15.0pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ <tr height=25 style='height:18.6pt'>
+  <td height=25 class=xl6823725 style='height:18.6pt'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Avsättning på VV/VVC</td>
-  <td class=xl6926911>-</td>
-  <td class=xl6926911>-</td>
-  <td class=xl6926911>-</td>
+  <td class=xl6923725>-</td>
+  <td class=xl6923725>-</td>
+  <td class=xl6923725>-</td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
-  <td width=171 style='width:128pt'></td>
-  <td width=82 style='width:62pt'></td>
-  <td width=114 style='width:86pt'></td>
-  <td width=133 style='width:100pt'></td>
+  <td width=269 style='width:202pt'></td>
+  <td width=130 style='width:98pt'></td>
+  <td width=181 style='width:136pt'></td>
+  <td width=209 style='width:157pt'></td>
  </tr>
  <![endif]>
 </table>
