--- a/host/22427/table2/index.htm
+++ b/host/22427/table2/index.htm
@@ -7,10 +7,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="index-filer/filelist.xml">
-<style id="KVP resultat 2022-07-08_3819_Styles"><!--table
+<style id="KVP resultat 2022-07-08_10460_Styles">
+<!--table
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
-.xl153819
+.xl1510460
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -28,29 +29,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl633819
-	{padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:18.0pt;
-	font-weight:700;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:General;
-	text-align:center;
-	vertical-align:middle;
-	border-top:1.0pt solid #7F7F7F;
-	border-right:none;
-	border-bottom:1.0pt solid #7F7F7F;
-	border-left:none;
-	mso-background-source:auto;
-	mso-pattern:auto;
-	white-space:nowrap;}
-.xl643819
+.xl6310460
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -72,7 +51,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl653819
+.xl6410460
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -94,7 +73,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl663819
+.xl6510460
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -116,7 +95,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl673819
+.xl6610460
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -138,7 +117,52 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
---></style>
+.xl6710460
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:18.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:"Times New Roman", serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:general;
+	vertical-align:middle;
+	border-top:1.0pt solid #7F7F7F;
+	border-right:none;
+	border-bottom:1.0pt solid #7F7F7F;
+	border-left:none;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl6810460
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:18.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:left;
+	vertical-align:middle;
+	border-top:1.0pt solid #7F7F7F;
+	border-right:none;
+	border-bottom:1.0pt solid #7F7F7F;
+	border-left:none;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+-->
+</style>
 </head>
 
 <body>
@@ -151,46 +175,74 @@ mellan DIV-parametrarna att ersättas.-->
 <!--BÖRJAN PÅ UTDATA FRÅN GUIDEN PUBLICERA SOM WEBBSIDA I EXCEL -->
 <!----------------------------->
 
-<div id="KVP resultat 2022-07-08_3819" align=center x:publishsource="Excel">
+<div id="KVP resultat 2022-07-08_10460" align=center x:publishsource="Excel">
 
-<table border=0 cellpadding=0 cellspacing=0 width=399 style='border-collapse:
- collapse;table-layout:fixed;width:300pt'>
- <col width=269 style='mso-width-source:userset;mso-width-alt:9557;width:202pt'>
- <col width=130 style='mso-width-source:userset;mso-width-alt:4636;width:98pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=644 style='border-collapse:
+ collapse;table-layout:fixed;width:483pt'>
+ <col width=476 style='mso-width-source:userset;mso-width-alt:16924;width:357pt'>
+ <col width=168 style='mso-width-source:userset;mso-width-alt:5973;width:126pt'>
  <tr height=31 style='height:23.4pt'>
-  <td height=31 class=xl633819 width=269 style='height:23.4pt;width:202pt'>Total
+  <td height=31 class=xl6810460 width=476 style='height:23.4pt;width:357pt'>Total
   kyla [MWh]</td>
-  <td class=xl653819 width=130 style='width:98pt'>509</td>
+  <td class=xl6410460 width=168 style='width:126pt'>509</td>
  </tr>
  <tr height=31 style='height:23.4pt'>
-  <td height=31 class=xl663819 style='height:23.4pt;border-top:none'>Från
+  <td height=31 class=xl6510460 style='height:23.4pt;border-top:none'>Från
   förångare</td>
-  <td class=xl643819 style='border-top:none'>356</td>
+  <td class=xl6310460 style='border-top:none'>356</td>
  </tr>
  <tr height=31 style='height:23.4pt'>
-  <td height=31 class=xl673819 style='height:23.4pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <td height=31 class=xl6610460 style='height:23.4pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Varav under värmedrift</td>
-  <td class=xl643819 style='border-top:none'>115</td>
+  <td class=xl6310460 style='border-top:none'>115</td>
  </tr>
  <tr height=31 style='height:23.4pt'>
-  <td height=31 class=xl673819 style='height:23.4pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <td height=31 class=xl6610460 style='height:23.4pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Varav under frikyldrift</td>
-  <td class=xl643819 style='border-top:none'>99</td>
+  <td class=xl6310460 style='border-top:none'>99</td>
  </tr>
  <tr height=31 style='height:23.4pt'>
-  <td height=31 class=xl673819 style='height:23.4pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <td height=31 class=xl6610460 style='height:23.4pt;border-top:none'>-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   Varav under aktiv kyldrift</td>
-  <td class=xl643819 style='border-top:none'>142</td>
+  <td class=xl6310460 style='border-top:none'>142</td>
  </tr>
  <tr height=31 style='height:23.4pt'>
-  <td height=31 class=xl663819 style='height:23.4pt;border-top:none'>Från
+  <td height=31 class=xl6510460 style='height:23.4pt;border-top:none'>Från
   frikyla geolager</td>
-  <td class=xl643819 style='border-top:none'>152</td>
+  <td class=xl6310460 style='border-top:none'>152</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl1510460 style='height:14.4pt'></td>
+  <td class=xl1510460></td>
+ </tr>
+ <tr height=20 style='height:15.0pt'>
+  <td height=20 class=xl1510460 style='height:15.0pt'></td>
+  <td class=xl1510460></td>
+ </tr>
+ <tr height=31 style='height:23.4pt'>
+  <td height=31 class=xl6810460 style='height:23.4pt'>Energibalans
+  borrhålslager [MWh]</td>
+  <td class=xl6410460>-41</td>
+ </tr>
+ <tr height=31 style='height:23.4pt'>
+  <td height=31 class=xl6710460 style='height:23.4pt;border-top:none'>Värmeuttag
+  förångare (värmedrift)</td>
+  <td class=xl6310460 style='border-top:none'>-211</td>
+ </tr>
+ <tr height=31 style='height:23.4pt'>
+  <td height=31 class=xl6710460 style='height:23.4pt;border-top:none'>Värmetillförsel
+  (frikyldrift)<span style='mso-spacerun:yes'> </span></td>
+  <td class=xl6310460 style='border-top:none'>152</td>
+ </tr>
+ <tr height=31 style='height:23.4pt'>
+  <td height=31 class=xl6710460 style='height:23.4pt;border-top:none'>Värmetillförsel
+  kondensorvärme (aktiv kyldrift)</td>
+  <td class=xl6310460 style='border-top:none'>18</td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
-  <td width=269 style='width:202pt'></td>
-  <td width=130 style='width:98pt'></td>
+  <td width=476 style='width:357pt'></td>
+  <td width=168 style='width:126pt'></td>
  </tr>
  <![endif]>
 </table>
@@ -204,6 +256,3 @@ mellan DIV-parametrarna att ersättas.-->
 </body>
 
 </html>
-
-
-
