--- a/host/22427/table2/index.htm
+++ b/host/22427/table2/index.htm
@@ -7,8 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="index-filer/filelist.xml">
-<style id="KVP resultat 2022-07-08_10460_Styles">
-<!--table
+<style id="KVP resultat 2022-07-08_10460_Styles"><!--table
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
 .xl1510460
@@ -161,8 +160,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
--->
-</style>
+--></style>
 </head>
 
 <body>
@@ -256,3 +254,4 @@ mellan DIV-parametrarna att ersättas.-->
 </body>
 
 </html>
+
