--- a/host/sth_geo/index.html
+++ b/host/sth_geo/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h2>HTML Image</h2>
-<img src="iconGEO.png" alt="Geo logo" width="342" height="390">
+<img src="host/sth_geo/iconGEO.png" alt="Geo logo" width="342" height="390">
 
 </body>
 </html>
