--- a/host/logo/index.html
+++ b/host/logo/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h2>HTML Image</h2>
-<img src="host/assets/img/iconGEO.png" alt="Geo logo" width="342" height="390">
+<img src="host/assets/img/iconGEO.PNG" alt="Geo logo" width="342" height="390">
 
 </body>
 </html>
