--- a/host/22605/index.htm
+++ b/host/22605/index.htm
@@ -8,9 +8,9 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
-<link rel=File-List href="Tabeller%20rapport-filer/filelist.xml">
+<link rel=File-List href="index-filer/filelist.xml">
 <![if !supportTabStrip]>
-<link id="shLink" href="Tabeller%20rapport-filer/sheet001.htm">
+<link id="shLink" href="index-filer/sheet001.htm">
 
 <link id="shLink">
 
@@ -298,10 +298,10 @@ function fnSetActiveSheet(iSh)
   <x:ExcelWorksheets>
    <x:ExcelWorksheet>
     <x:Name>Blad1</x:Name>
-    <x:WorksheetSource HRef="Tabeller%20rapport-filer/sheet001.htm"/>
+    <x:WorksheetSource HRef="index-filer/sheet001.htm"/>
    </x:ExcelWorksheet>
   </x:ExcelWorksheets>
-  <x:Stylesheet HRef="Tabeller%20rapport-filer/stylesheet.css"/>
+  <x:Stylesheet HRef="index-filer/stylesheet.css"/>
   <x:WindowHeight>12648</x:WindowHeight>
   <x:WindowWidth>22260</x:WindowWidth>
   <x:WindowTopX>1176</x:WindowTopX>
@@ -313,8 +313,8 @@ function fnSetActiveSheet(iSh)
 </head>
 
 <frameset rows="*,39" border=0 width=0 frameborder=no framespacing=0>
- <frame src="Tabeller%20rapport-filer/sheet001.htm" name="frSheet">
- <frame src="Tabeller%20rapport-filer/tabstrip.htm" name="frTabs" marginwidth=0 marginheight=0>
+ <frame src="index-filer/sheet001.htm" name="frSheet">
+ <frame src="index-filer/tabstrip.htm" name="frTabs" marginwidth=0 marginheight=0>
  <noframes>
   <body>
    <p>Bildrutor används för den här sidan, men de stöds inte av webbläsaren.</p>
