--- a/host/22587/table1/index.htm
+++ b/host/22587/table1/index.htm
@@ -6,7 +6,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
-<link rel=File-List href="table1-filer/filelist.xml">
+<link rel=File-List href="index-filer/filelist.xml">
 <style id="Tabeller för rapport (HTML) m.m._2997_Styles">
 <!--table
 	{mso-displayed-decimal-separator:"\,";
