--- a/host/22587/table1/index.htm
+++ b/host/22587/table1/index.htm
@@ -7,11 +7,11 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="index-filer/filelist.xml">
-<style id="Tabeller för rapport (HTML) m.m._2997_Styles">
+<style id="Tabeller för rapport (HTML) m.m._29155_Styles">
 <!--table
 	{mso-displayed-decimal-separator:"\,";
 	mso-displayed-thousand-separator:" ";}
-.font52997
+.font529155
 	{color:black;
 	font-size:18.0pt;
 	font-weight:700;
@@ -19,7 +19,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	text-decoration:none;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
-.font62997
+.font629155
 	{color:black;
 	font-size:18.0pt;
 	font-weight:700;
@@ -27,7 +27,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	text-decoration:none;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
-.font72997
+.font729155
 	{color:black;
 	font-size:18.0pt;
 	font-weight:700;
@@ -35,7 +35,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	text-decoration:none;
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;}
-.xl152997
+.xl1529155
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -53,13 +53,13 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl632997
+.xl6329155
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:18.0pt;
+	font-size:11.0pt;
 	font-weight:400;
 	font-style:normal;
 	text-decoration:none;
@@ -71,36 +71,14 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl642997
+.xl6429155
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
 	mso-ignore:padding;
 	color:black;
-	font-size:18.0pt;
+	font-size:11.0pt;
 	font-weight:400;
-	font-style:normal;
-	text-decoration:none;
-	font-family:Arial, sans-serif;
-	mso-font-charset:0;
-	mso-number-format:General;
-	text-align:general;
-	vertical-align:bottom;
-	border-top:none;
-	border-right:1.5pt solid #003082;
-	border-bottom:none;
-	border-left:none;
-	mso-background-source:auto;
-	mso-pattern:auto;
-	white-space:nowrap;}
-.xl652997
-	{padding-top:1px;
-	padding-right:1px;
-	padding-left:1px;
-	mso-ignore:padding;
-	color:black;
-	font-size:18.0pt;
-	font-weight:700;
 	font-style:normal;
 	text-decoration:none;
 	font-family:Arial, sans-serif;
@@ -115,7 +93,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
-.xl662997
+.xl6529155
 	{padding-top:1px;
 	padding-right:1px;
 	padding-left:1px;
@@ -128,12 +106,84 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
 	mso-number-format:General;
-	text-align:general;
-	vertical-align:bottom;
+	text-align:center;
+	vertical-align:middle;
 	border-top:none;
-	border-right:1.5pt solid #003082;
+	border-right:none;
 	border-bottom:1.5pt solid #003082;
 	border-left:none;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl6629155
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:18.0pt;
+	font-weight:700;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:center;
+	vertical-align:middle;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl6729155
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:right;
+	vertical-align:bottom;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl6829155
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:center;
+	vertical-align:middle;
+	mso-background-source:auto;
+	mso-pattern:auto;
+	white-space:nowrap;}
+.xl6929155
+	{padding-top:1px;
+	padding-right:1px;
+	padding-left:1px;
+	mso-ignore:padding;
+	color:black;
+	font-size:11.0pt;
+	font-weight:400;
+	font-style:normal;
+	text-decoration:none;
+	font-family:Arial, sans-serif;
+	mso-font-charset:0;
+	mso-number-format:General;
+	text-align:center;
+	vertical-align:bottom;
 	mso-background-source:auto;
 	mso-pattern:auto;
 	white-space:nowrap;}
@@ -151,85 +201,84 @@ mellan DIV-parametrarna att ersättas.-->
 <!--BÖRJAN PÅ UTDATA FRÅN GUIDEN PUBLICERA SOM WEBBSIDA I EXCEL -->
 <!----------------------------->
 
-<div id="Tabeller för rapport (HTML) m.m._2997" align=center
+<div id="Tabeller för rapport (HTML) m.m._29155" align=center
 x:publishsource="Excel">
 
-<table border=0 cellpadding=0 cellspacing=0 width=1392 style='border-collapse:
- collapse;table-layout:fixed;width:1043pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=1439 style='border-collapse:
+ collapse;table-layout:fixed;width:1078pt'>
  <col width=526 style='mso-width-source:userset;mso-width-alt:18688;width:394pt'>
- <col width=75 style='mso-width-source:userset;mso-width-alt:2673;width:56pt'>
- <col width=157 style='mso-width-source:userset;mso-width-alt:5575;width:118pt'>
- <col width=216 style='mso-width-source:userset;mso-width-alt:7680;width:162pt'>
- <col width=131 style='mso-width-source:userset;mso-width-alt:4664;width:98pt'>
- <col width=287 style='mso-width-source:userset;mso-width-alt:10211;width:215pt'>
- <tr height=39 style='height:29.4pt'>
-  <td height=39 class=xl652997 width=526 style='height:29.4pt;width:394pt'>Fastighetsenergi
-  (kWh/m<font class="font62997"><sup>2</sup></font><font class="font52997">, A</font><font
-  class="font72997"><sub>temp</sub></font><font class="font52997">)</font></td>
-  <td class=xl662997 width=75 style='width:56pt'>Totalt</td>
-  <td class=xl652997 width=157 style='width:118pt'>Varav värme</td>
-  <td class=xl652997 width=216 style='width:162pt'>Varav varmvatten</td>
-  <td class=xl652997 width=131 style='width:98pt'>Varav kyla</td>
-  <td class=xl652997 width=287 style='width:215pt'>Varav övrig fastighetsel</td>
+ <col width=387 style='mso-width-source:userset;mso-width-alt:13767;width:290pt'>
+ <col width=526 style='mso-width-source:userset;mso-width-alt:18688;width:394pt'>
+ <tr height=38 style='height:28.2pt'>
+  <td height=38 class=xl6429155 width=526 style='height:28.2pt;width:394pt'>&nbsp;</td>
+  <td class=xl6529155 width=387 style='width:290pt'>Fastighetsenergi (kWh/m<font
+  class="font629155"><sup>2</sup></font><font class="font529155">, A</font><font
+  class="font729155"><sub>temp</sub></font><font class="font529155">)</font></td>
+  <td class=xl6529155 width=526 style='width:394pt'>Hushålls/verksamhetsenergi
+  (kWh/m<font class="font629155"><sup>2</sup></font><font class="font529155">,
+  A</font><font class="font729155"><sub>temp</sub></font><font
+  class="font529155">)</font></td>
  </tr>
  <tr height=31 style='height:23.4pt'>
-  <td height=31 class=xl632997 style='height:23.4pt'>Bostäder</td>
-  <td class=xl642997 align=right>50</td>
-  <td class=xl632997 align=right>15</td>
-  <td class=xl632997 align=right>25</td>
-  <td class=xl632997 align=right>0</td>
-  <td class=xl632997 align=right>10</td>
+  <td height=31 class=xl6629155 style='height:23.4pt'>Bostäder, totalt</td>
+  <td class=xl6629155>50</td>
+  <td class=xl6629155>20</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6729155 style='height:14.4pt'>varav värme</td>
+  <td class=xl6829155>15</td>
+  <td class=xl6929155>-</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6729155 style='height:14.4pt'>varav varmvatten</td>
+  <td class=xl6829155>25</td>
+  <td class=xl6929155>-</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6729155 style='height:14.4pt'>varav kyla</td>
+  <td class=xl6829155>0</td>
+  <td class=xl6929155>-</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6729155 style='height:14.4pt'>varav el</td>
+  <td class=xl6829155>10</td>
+  <td class=xl6829155>20</td>
+ </tr>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6329155 style='height:14.4pt'></td>
+  <td class=xl6929155></td>
+  <td class=xl6929155></td>
  </tr>
  <tr height=30 style='height:22.8pt'>
-  <td height=30 class=xl632997 style='height:22.8pt'>Lokaler</td>
-  <td class=xl642997 align=right>45</td>
-  <td class=xl632997 align=right>15</td>
-  <td class=xl632997 align=right>5</td>
-  <td class=xl632997 align=right>15</td>
-  <td class=xl632997 align=right>10</td>
+  <td height=30 class=xl6629155 style='height:22.8pt'>Lokaler, totalt</td>
+  <td class=xl6629155>45</td>
+  <td class=xl6629155>50</td>
  </tr>
- <tr height=30 style='height:22.8pt'>
-  <td height=30 class=xl632997 style='height:22.8pt'></td>
-  <td class=xl642997>&nbsp;</td>
-  <td class=xl632997></td>
-  <td class=xl632997></td>
-  <td class=xl632997></td>
-  <td class=xl632997></td>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6729155 style='height:14.4pt'>varav värme</td>
+  <td class=xl6829155>15</td>
+  <td class=xl6929155>-</td>
  </tr>
- <tr height=39 style='height:29.4pt'>
-  <td height=39 class=xl652997 style='height:29.4pt'>Hushålls/verksamhetsenergi
-  (kWh/m<font class="font62997"><sup>2</sup></font><font class="font52997">, A</font><font
-  class="font72997"><sub>temp</sub></font><font class="font52997">)</font></td>
-  <td class=xl662997>&nbsp;</td>
-  <td class=xl652997>&nbsp;</td>
-  <td class=xl652997>&nbsp;</td>
-  <td class=xl652997>&nbsp;</td>
-  <td class=xl652997>&nbsp;</td>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6729155 style='height:14.4pt'>varav varmvatten</td>
+  <td class=xl6829155>5</td>
+  <td class=xl6929155>-</td>
  </tr>
- <tr height=31 style='height:23.4pt'>
-  <td height=31 class=xl632997 style='height:23.4pt'>Bostäder</td>
-  <td class=xl642997 align=right>20</td>
-  <td class=xl632997></td>
-  <td class=xl632997></td>
-  <td class=xl632997></td>
-  <td class=xl632997></td>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6729155 style='height:14.4pt'>varav kyla</td>
+  <td class=xl6829155>15</td>
+  <td class=xl6929155>-</td>
  </tr>
- <tr height=30 style='height:22.8pt'>
-  <td height=30 class=xl632997 style='height:22.8pt'>Lokaler</td>
-  <td class=xl642997 align=right>50</td>
-  <td class=xl632997></td>
-  <td class=xl632997></td>
-  <td class=xl632997></td>
-  <td class=xl632997></td>
+ <tr height=19 style='height:14.4pt'>
+  <td height=19 class=xl6729155 style='height:14.4pt'>varav el</td>
+  <td class=xl6829155>10</td>
+  <td class=xl6829155>50</td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
   <td width=526 style='width:394pt'></td>
-  <td width=75 style='width:56pt'></td>
-  <td width=157 style='width:118pt'></td>
-  <td width=216 style='width:162pt'></td>
-  <td width=131 style='width:98pt'></td>
-  <td width=287 style='width:215pt'></td>
+  <td width=387 style='width:290pt'></td>
+  <td width=526 style='width:394pt'></td>
  </tr>
  <![endif]>
 </table>
